create all folders, add binary availability check
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,14 +2,15 @@
 #winsw_service_id: ~
 #winsw_service_name: ~
 #winsw_service_user: ~
-winsw_service_path: 'C:\Users\{{ winsw_service_user }}\{{ winsw_service_id }}'
+winsw_service_path: 'C:/Users/{{ winsw_service_user }}/{{ winsw_service_id }}'
 winsw_service_description: 'Service managed by WinSW'
-winsw_service_definition: '{{ winsw_service_path }}\{{ winsw_service_id }}.yml'
+winsw_service_definition: '{{ winsw_service_path }}/{{ winsw_service_id }}.yml'
 winsw_service_arguments: []
 #winsw_service_exe_url: ~
 #winsw_service_exe_sha256: ~
-winsw_service_exe_path: '{{ winsw_service_path }}\{{ winsw_service_id }}.exe'
+winsw_service_exe_path: '{{ winsw_service_path }}/{{ winsw_service_id }}.exe'
 winsw_service_work_dir: '{{ winsw_service_path }}'
+winsw_service_logs_dir: '{{ winsw_service_path }}/log'
 winsw_service_pid_path: '{{ winsw_service_path }}/{{ winsw_service_id }}.pid'
 winsw_service_stop_timeout: 10
 # idle, belownormal, normal, abovenormal, high, realtime (case insensitive.)
@@ -24,7 +25,7 @@ winsw_service_log_pattern: 'yyyyMMdd-HHmmss'
 
 # The service is installed as the LocalSystem account by default.
 winsw_service_logon_enabled: false
-winsw_service_logon_domain: ~
+winsw_service_logon_domain: '{{ ansible_netbios_name }}'
 winsw_service_logon_pass: ~
 
 # Environment variables to provide to the service.
