--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -3,33 +3,33 @@
   template:
     src: 'service.yml.j2'
     dest: '{{ winsw_service_definition }}'
-    user: 'jenkins'
+    user: '{{ winsw_service_user }}'
   register: service_file
 
-- name: Check Jenkins agent service status
+- name: Check service status
   win_command: '{{ winsw_service_wrapper_path }} status'
   register: service_status
   ignore_errors: true
 
-- name: Stop the Jenkins agent service
+- name: Stop service
   win_command: '{{ winsw_service_wrapper_path }} stopwait'
   register: service_install
   when: >
     (service_status.stdout|trim) != "NonExistent"
     and service_file.changed
 
-- name: Uninstall the Jenkins agent service
+- name: Uninstall service
   win_command: '{{ winsw_service_wrapper_path }} uninstall'
   register: service_install
   when: >
     (service_status.stdout|trim) != "NonExistent"
     and service_file.changed
 
-- name: Install the Jenkins agent service
+- name: Install service
   win_command: '{{ winsw_service_wrapper_path }} install'
   when: >
     (service_status.stdout|trim) == "NonExistent"
     or service_install.changed
 
-- name: (Re)Start the Jenkins agent service
+- name: (Re)Start service
   win_command: '{{ winsw_service_wrapper_path }} restart'
