--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,16 +2,16 @@
 #winsw_service_id: ~
 #winsw_service_name: ~
 #winsw_service_user: ~
-winsw_service_path: 'C:/Users/{{ winsw_service_user }}/{{ winsw_service_id }}'
+winsw_service_path: 'C:\Users\{{ winsw_service_user }}\{{ winsw_service_id }}'
 winsw_service_description: 'Service managed by WinSW'
-winsw_service_definition: '{{ winsw_service_path }}/{{ winsw_service_id }}.yml'
+winsw_service_definition: '{{ winsw_service_path }}\{{ winsw_service_id }}.yml'
 winsw_service_arguments: []
 #winsw_service_exe_url: ~
 #winsw_service_exe_sha256: ~
-winsw_service_exe_path: '{{ winsw_service_path }}/{{ winsw_service_id }}.exe'
+winsw_service_exe_path: '{{ winsw_service_path }}\{{ winsw_service_id }}.exe'
 winsw_service_work_dir: '{{ winsw_service_path }}'
-winsw_service_logs_dir: '{{ winsw_service_path }}/log'
-winsw_service_pid_path: '{{ winsw_service_path }}/{{ winsw_service_id }}.pid'
+winsw_service_logs_dir: '{{ winsw_service_path }}\log'
+winsw_service_pid_path: '{{ winsw_service_path }}\{{ winsw_service_id }}.pid'
 winsw_service_stop_timeout: 10
 # idle, belownormal, normal, abovenormal, high, realtime (case insensitive.)
 winsw_service_priority: 'normal'
