--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,7 @@ winsw_service_work_dir: '{{ winsw_service_path }}'
 winsw_service_logs_dir: '{{ winsw_service_path }}\log'
 winsw_service_pid_path: '{{ winsw_service_path }}\{{ winsw_service_id }}.pid'
 winsw_service_stop_timeout: 10
+winsw_service_on_failure: 'restart'
 # idle, belownormal, normal, abovenormal, high, realtime (case insensitive.)
 winsw_service_priority: 'normal'
 
