service: parametrize if service restarts or starts
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -14,6 +14,7 @@ winsw_service_logs_dir: '{{ winsw_service_path }}\logs'
 winsw_service_pid_path: '{{ winsw_service_path }}\{{ winsw_service_id }}.pid'
 winsw_service_stop_timeout: 10
 winsw_service_on_failure: 'restart'
+winsw_service_restart: false
 # idle, belownormal, normal, abovenormal, high, realtime (case insensitive.)
 winsw_service_priority: 'normal'
 
